site/templates/styles/main.css
/**************************************
	General Styles
**************************************/
html {
	position: relative;
	height: 100%;
}

body { height: 100%;}

footer {
	width: 100%;
	padding-top: 15px;
}

.smaller {
	font-size: 70%;
}

table.table-md td, table.table-md th {
	padding: .5rem;
}

@media (min-width:1400px) {
	.container {
		max-width:1366px;
	}
}

/**************************************
	Bootstrap Styles
**************************************/
.invalid-feedback.show {
	display: block;
}
.breadcrumb .breadcrumb-item::before {color: white;}
.breadcrumb-item+.breadcrumb-item::before {
	display: inline-block;
	padding-right: 0.5rem;
	color: #6c757d;
	content: "/"
}

.breadcrumb-item.active {
	color: #FF304F;
}

.toolbar-sidebar > .nav > li > a {
	display: block;
	padding: .25rem 1.5rem;
	font-size: 90%;
	color: rgba(0,0,0,.65);
}

.bg-gray {
	background-color: #c8bfc7 !important;
}

.bg-totals {
	background-color: #C5D86D !important;
	font-weight: bold;
}

.form-group label {
	font-weight: bold;
}

.modal-600 {
	max-width: 600px;
}

.modal-700 {
	max-width: 700px;
}

.table-smd td {
	padding: .45rem;
}

.page-item.disabled .page-link {
	background-color: #e9ecef;
}

.nav-pills .nav-item:hover {
	color: #212529;
	background-color: rgba(0, 0, 0, 0.075)
}

/*==============================================================
	FUELUX Styles
==============================================================*/
.fuelux .datepicker-calendar-days td button, .fuelux .datepicker-calendar-header .title {
	cursor: pointer;
}

.fuelux .datepicker-calendar-days td.selected.current-day b,
.fuelux .datepicker-calendar-days td.selected.current-day button {
	color: #fff;
}

.fuelux .datepicker-calendar-days td.current-day span {
	background: #007bff;
}
.fuelux .datepicker-calendar-days td.current-day button {
	color: #fff;
}


/*==============================================================
	Bootstrap Notify Styles
==============================================================*/
[data-notify="progressbar"] {
	margin-bottom: 0px;
	position: absolute;
	bottom: 0px;
	left: 0px;
	width: 100%;
	height: 5px;
}

/*==============================================================
	Application Styles
==============================================================*/
.jumbotron.page-banner {
	padding: 1rem 1rem;
}

.container.page {
	min-height: 100%;
	height: 100%;
	height: auto;
	padding-bottom:200px;
}


.highlight {background: #efcc00; }
a .highlight {color: #000;}
.highlight a {color: #0f7864; }

#back-to-top {
	position: fixed;
	bottom: 20px;
	right: 20px;
	z-index: 12;
	display: none;
}

.fa-1-2x {
	font-size: 1.2em;
}

a.link {
	text-decoration: none;
	background-color: transparent;
	border-bottom: 3px solid #bcdcef;
	-webkit-transition: background .15s cubic-bezier(0.33, 0.66, 0.66, 1);
	-o-transition: background .15s cubic-bezier(0.33, 0.66, 0.66, 1);
	transition: background .15s cubic-bezier(0.33, 0.66, 0.66, 1);
	-webkit-box-shadow: inset 0 -4px 0 #bcdcef;
	box-shadow: inset 0 -4px 0 #bcdcef;
}

a.link:hover {
	background-color: #bcdcef;
}

.text-white a.link {
	color: white;
}

a.image-link {
	text-decoration: none;
	background-color: transparent;
	border: 5px solid #bcdcef;
	-webkit-transition: background .15s cubic-bezier(0.33, 0.66, 0.66, 1);
	-o-transition: background .15s cubic-bezier(0.33, 0.66, 0.66, 1);
	transition: background .15s cubic-bezier(0.33, 0.66, 0.66, 1);
	-webkit-box-shadow: inset 0 -4px 0 #bcdcef;
	box-shadow: inset 0 -4px 0 #bcdcef;
	display: inline-block;
}

a.image-link:hover {
	border-color: #8ba2b0;
}

.toolbar-sidebar .nav li {
	width: 100%;
}

.list-group.dplus-menu .list-group-item {
	padding: .5rem 1.25rem;
}

.list-inline.comma-list {
	display: inline;
}

.list-inline.comma-list li.list-inline-item:not(:last-child):after {
	content: ","
}

.modal#ajax-notes-modal {
	z-index: 1500;
}

.paginator .dropdown-menu {
	max-height: 200px;
	overflow-y:auto;
}

.table-striped.blue-stripes tbody tr:nth-of-type(2n+1) {
	background-color: rgba(176, 198, 206, .5);
	background-color: rgba(56, 163, 162, .15);
}


/************************************** Navbar **************************************/
#yt-menu {
	width: 300px;
	border: 1px solid #ccc;
	z-index: 13;
	position: absolute;
	box-shadow: 5px 10px 15px 5px rgba(0,0,0,.1);
	margin-top: 0px;
	display: none;
}

#yt-menu .nav-item:hover {
	background: #ccc;
}

/************************************** Login **************************************/
.login-form {
	width: 100%;
	max-width: 500px;
	padding: 15px;
	margin: auto
}

/************************************** Login **************************************/
#user-actions-list {
	overflow-y: scroll;
	max-height: 500px;
}

/************************************** Table Styles *******************************/
.first-txn-row {border-top: 2px solid black;}

/************************************** Dashboard **************************************/
#top-selling-list {
	max-height: 500px;
	overflow-y: scroll;
}

/************************************** Custom **************************************/
.scroll-500 {
	overflow-y: scroll;
	max-height: 500px;
}

.scroll-300 {
	overflow-y: scroll;
	max-height: 300px;
}

.highlight {
	background: #FADA5E;
}

/*==============================================================
	FORM Styles
==============================================================*/
select.form-control.is-invalid, select.form-control.is-valid {
	background-position: center right calc(.375em + .9875rem);
}
input.form-control.is-valid.text-right,
input.form-control.is-invalid.text-right {
	background-position: center left calc(.25em + .25rem);
	padding-right: .375em;
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
	-webkit-appearance: none;
	margin: 0;
}

/* Firefox */
input.form-control[type=number] {
	-moz-appearance: textfield;
}

textarea.qnotes {
	font-family: monospace;
}

.input-group > .input-group-append.w25 {
	flex: 0 0 25%;
}

.input-group .input-group-text {
	width: 100%;
}

.screen-overlay {
	height: 100%;
	z-index: 30;
	position: fixed;
	top: 0;
	left: 0;
	opacity:0;
	visibility:hidden;
	background-color: rgba(34, 34, 34, 0.6);
	transition:opacity .2s linear, visibility .1s, width 1s ease-in;
}

.screen-overlay.show {
	transition:opacity .5s ease, width 0s;
	opacity:1;
	width:100%;
	visibility:visible;
}

.offcanvas {
	width:400px;
	visibility: hidden;
	transform:translateX(-100%);
	transition:all .2s;
	border-radius:0;
	box-shadow: 0 5px 10px rgba(0,0,0, .2);
	display:block;
	position: fixed;
	top: 0;
	left: 0;
	height: 100%;
	z-index: 1200;
	background-color: #fff;
	overflow-y: scroll;
	overflow-x: hidden;
}

.offcanvas.show {
	visibility: visible;
	transform: translateX(0);
	transition: transform .2s;
}

.offcanvas .nav-actions {
	position: fixed;
	bottom: 1rem;
}

form label {
	font-weight: bold;
}

/*==============================================================
	Bootstrap Select Styles
==============================================================*/
.bootstrap-select .btn.dropdown-toggle {
	color: #495057;
	background-color: #fff;
	background-clip: padding-box;
	border: 1px solid #ced4da;
	border-top-color: rgb(206, 212, 218);
	border-right-color: rgb(206, 212, 218);
	border-bottom-color: rgb(206, 212, 218);
	border-left-color: rgb(206, 212, 218);
	border-radius: .25rem;
	transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

/*==============================================================
	Bootstrap Card Styles
==============================================================*/
.card .card-toolbar {
	background-color: rgba(56, 163, 162, .45);
}

